Make Result Bar Start Empty

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Simple Calculator</h1>
     </header>
     <div class="calc-grid">
-        <div class="result-bar">0</div>
+        <div class="result-bar"></div>
         <button id="c">C</button>
         <button id="divide">/</button>
         <button id="multiply">*</button>
