--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -14,22 +15,22 @@
     <div class="calc-grid">
         <div class="result-bar"></div>
         <button id="c">C</button>
-        <button id="divide">/</button>
-        <button id="multiply">*</button>
-        <button id="subtract">-</button>
-        <button id="7">7</button>
-        <button id="8">8</button>
-        <button id="9">9</button>
-        <button id="add">+</button>
-        <button id="4">4</button>
-        <button id="5">5</button>
-        <button id="6">6</button>
-        <button id="1">1</button>
-        <button id="2">2</button>
-        <button id="3">3</button>
-        <button id="zero">0</button>
-        <button id="decimal">.</button>
-        <button id="equals">=</button>
+        <button id="divide" class="operator">/</button>
+        <button id="multiply" class="operator">*</button>
+        <button id="subtract" class="operator">-</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button id="add" class="operator">+</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="number" id="zero">0</button>
+        <button class="number">.</button>
+        <button class="operator" id="equals">=</button>
     </div>
 </body>
 </html>
