--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="calc-grid">
         <div class="result-bar"></div>
         <button id="c">C</button>
-        <button id="divide" class="operator">/</button>
-        <button id="multiply" class="operator">*</button>
-        <button id="subtract" class="operator">-</button>
+        <button class="operator">/</button>
+        <button class="operator">*</button>
+        <button class="operator">-</button>
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
-        <button id="add" class="operator">+</button>
+        <button class="operator" id="add" >+</button>
         <button class="number">4</button>
         <button class="number">5</button>
         <button class="number">6</button>
