--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <div class="calc-grid">
         <div class="result-bar"></div>
+        <button id="backspace">&larr;</button>
         <button id="c">C</button>
         <button class="operator">/</button>
         <button class="operator">*</button>
